# fastapi-scafold

./: .coveragerc  .env.example  Dockerfile  Makefile  README.md  docker-compose-swarm.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 701ac81df0c2_create_initial_tables.py  c4cb921ade52_create_initial_tables.py
app/: __main__.py  application.py  conftest.py  lifetime.py  settings.py
app/api/: router.py
app/api/auth/: __init__.py  schemas.py  views.py
app/api/docs/: __init__.py  views.py
app/api/error_response/: schema.py
app/api/helpers/: authenticator.py  exception.py  handler.py  jwt_utils.py  query_parameters.py  validators.py
app/api/product/: __init__.py  schemas.py  views.py
app/db/: base.py  dependencies.py
app/models/: __init__.py  models.py
app/repository/: base.py  product_repository.py
app/service/: product_service.py
app/static/docs/: swagger-ui-bundle.js
app/tests/integration/: stubs.py  test_product.py
app/tests/unit/: test_schemas.py  test_validators.py
app/tests/unitary/: test_validators.py
