[tool.poetry]
name = "mb_challenge"
version = "0.1.0"
description = "Python project skeleton made using FastAPI and its main libraries."
authors = ["Melqui Menezes <melqui.menezes.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.93.0"
SQLAlchemy = "^2.0.5.post1"
pydantic = "^1.10.5"
fastapi-pagination = "^0.11.4"
alembic = "^1.10.2"
uvicorn = "^0.20.0"
pg = "^0.1"
yarl = "^1.8.2"
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"
loguru = "^0.6.0"
httpx = "^0.23.3"
flake8 = "^6.0.0"
pylint = "^2.17.0"
autoflake = "^2.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
